--- a/UtopiaCity/Views/EmergencyReport/DeleteEmergencyReportView.cshtml
+++ b/UtopiaCity/Views/EmergencyReport/DeleteEmergencyReportView.cshtml
@@ -27,7 +27,7 @@
     
     <form asp-action="DeleteEmergencyReportView">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" asp-action="Delete" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
