--- a/UtopiaCity/Views/EmergencyReport/CreateEmergencyReportView.cshtml
+++ b/UtopiaCity/Views/EmergencyReport/CreateEmergencyReportView.cshtml
@@ -1,18 +1,22 @@
 ﻿@model UtopiaCity.Models.Emergency.EmergencyReport
 
 @{
-    ViewData["Title"] = "EditEmergencyReportView";
+    ViewData["Title"] = "CreateEmergencyReportView";
 }
 
-<h1>EditEmergencyReportView</h1>
+<h1>CreateEmergencyReportView</h1>
 
 <h4>EmergencyReport</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="EditEmergencyReportView">
+        <form asp-action="CreateEmergencyReportView">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                <input asp-for="Id" class="form-control" />
+                <span asp-validation-for="Id" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Report" class="control-label"></label>
                 <input asp-for="Report" class="form-control" />
@@ -24,7 +28,7 @@
                 <span asp-validation-for="ReportTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" asp-action="Edit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
