--- a/UtopiaCity/Views/EmergencyReport/EditEmergencyReportView.cshtml
+++ b/UtopiaCity/Views/EmergencyReport/EditEmergencyReportView.cshtml
@@ -1,22 +1,18 @@
 ﻿@model UtopiaCity.Models.Emergency.EmergencyReport
 
 @{
-    ViewData["Title"] = "CreateEmergencyReportView";
+    ViewData["Title"] = "EditEmergencyReportView";
 }
 
-<h1>CreateEmergencyReportView</h1>
+<h1>EditEmergencyReportView</h1>
 
 <h4>EmergencyReport</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateEmergencyReportView">
+        <form asp-action="EditEmergencyReportView">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Report" class="control-label"></label>
                 <input asp-for="Report" class="form-control" />
@@ -28,7 +24,7 @@
                 <span asp-validation-for="ReportTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" asp-action="Create" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
