Added sevice for SportComplex

--- a/UtopiaCity/Views/SportComplex/AllSportComplexes.cshtml
+++ b/UtopiaCity/Views/SportComplex/AllSportComplexes.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<UtopiaCity.Models.Sport.SportComplex>
+﻿@model IEnumerable<SportComplex>
 
 @{
     ViewData["Title"] = "AllSportComplexes";
