--- a/UtopiaCity/Views/Reservation/DeleteReservationView.cshtml
+++ b/UtopiaCity/Views/Reservation/DeleteReservationView.cshtml
@@ -1,19 +1,18 @@
-@using Microsoft.AspNetCore.Identity
-@model UtopiaCity.Models.PublicCatering.Restaurant
+﻿@using Microsoft.AspNetCore.Identity
+@model UtopiaCity.Models.PublicCatering.Reservation
 @inject UserManager<IdentityUser> _userManager
 
 @{
-    ViewData["Title"] = "DeleteRestaurantView";
+    ViewData["Title"] = "DeleteReservationView";
 }
-
-<h4>Remove a restaurant from the list </h4>
+<h4>Remove a reservation from the list</h4>
 
 <h6>@_userManager.FindByIdAsync(_userManager.GetUserId(User)).Result.UserName, are you sure you want to delete this?</h6>
 <div>
     <hr/>
-    <dl class="row">
+    <dl class="dl-horizontal">
         <dt class="col-sm-2">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Restaurant.Name)
         </dt>
     </dl>
 
@@ -23,3 +22,4 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+
