--- a/UtopiaCity/Views/Restaurant/CreateRestaurantView.cshtml
+++ b/UtopiaCity/Views/Restaurant/CreateRestaurantView.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "CreateRestaurantView";
 }
 
-<h1>CreateRestaurantView</h1>
+<h1>Add a new restaurant to the list </h1>
 
 <h4>Restaurant</h4>
 <hr/>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -22,11 +22,11 @@
                 <input asp-for="Address" class="form-control"/>
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control"/>
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
+            @* <div class="form-group"> *@
+            @*     <label asp-for="RestaurantType" class="control-label"></label> *@
+            @*     <input asp-for="Seats" class="form-control"/> *@
+            @*     <span asp-validation-for="Seats" class="text-danger"></span> *@
+            @* </div> *@
             <div class="form-group">
                 <label asp-for="Seats" class="control-label"></label>
                 <input asp-for="Seats" class="form-control"/>
