--- a/UtopiaCity/Views/Restaurant/EditRestaurantView.cshtml
+++ b/UtopiaCity/Views/Restaurant/EditRestaurantView.cshtml
@@ -4,33 +4,28 @@
     ViewData["Title"] = "EditRestaurantView";
 }
 
-<h1>EditRestaurantView</h1>
+<h1>Edit a restaurant on the list </h1>
 
 <h4>Restaurant</h4>
 <hr/>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id"/>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control"/>
+                <input asp-for="Name" class="form-control" placeholder="@Model.Name"/>
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
-                <input asp-for="Address" class="form-control"/>
+                <input asp-for="Address" class="form-control" placeholder="@Model.Address"/>
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control"/>
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Seats" class="control-label"></label>
-                <input asp-for="Seats" class="form-control"/>
+                <input asp-for="Seats" class="form-control" placeholder="@Model.Seats"/>
                 <span asp-validation-for="Seats" class="text-danger"></span>
             </div>
             <div class="form-group">
