Replaced <int>Id with <string>SportComplexId

--- a/UtopiaCity/Views/SportComplex/Delete.cshtml
+++ b/UtopiaCity/Views/SportComplex/Delete.cshtml
@@ -44,7 +44,7 @@
     </dl>
 
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="SportComplexId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="AllSportComplexes">Back to List</a>
     </form>
