--- a/UtopiaCity/Views/SportComplex/Details.cshtml
+++ b/UtopiaCity/Views/SportComplex/Details.cshtml
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.SportComplexId">Edit</a> |
     <a asp-action="AllSportComplexes">Back to List</a>
 </div>
