--- a/UtopiaCity/Views/SportEvent/Create.cshtml
+++ b/UtopiaCity/Views/SportEvent/Create.cshtml
@@ -1,7 +1,7 @@
-﻿@model UtopiaCity.Models.Sport.SportEvent
+﻿@model UtopiaCity.Models.Sport.ViewModels.SportEventViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create"; 
 }
 
 <h1>Create</h1>
@@ -13,11 +13,6 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="SportEventId" class="control-label"></label>
-                <input asp-for="SportEventId" class="form-control" />
-                <span asp-validation-for="SportEventId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
@@ -28,6 +23,18 @@
                 <span asp-validation-for="DateOfTheEvent" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="SportComplexTitle" class="control-label"></label>
+                <select asp-for="SportComplexTitle" class="form-control">
+                    @foreach (var sportComplexTitle in Model.SportComplexesTitles)
+                    {
+                        <option value="@sportComplexTitle">
+                            @sportComplexTitle
+                        </option>
+                    }
+                </select>
+                <span asp-validation-for="SportComplexTitle" class="text-danger"></span>
+             </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -35,7 +42,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="AllSportEvents">Back to List</a>
 </div>
 
 @section Scripts {
