--- a/UtopiaCity/Views/SportEvent/Delete.cshtml
+++ b/UtopiaCity/Views/SportEvent/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model UtopiaCity.Models.Sport.SportEvent
+﻿@model SportEventViewModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -11,23 +11,35 @@
     <h4>SportEvent</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Title)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Title)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DateOfTheEvent)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DateOfTheEvent)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.SportComplexTitle)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.SportComplexTitle)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.SportComplexAddress)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.SportComplexAddress)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="SportEventId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="AllSportEvents">Back to List</a>
     </form>
 </div>
