--- a/UtopiaCity/Views/SportEvent/Details.cshtml
+++ b/UtopiaCity/Views/SportEvent/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model UtopiaCity.Models.Sport.SportEvent
+﻿@model UtopiaCity.Models.Sport.ViewModels.SportEventViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -23,20 +23,20 @@
             @Html.DisplayFor(model => model.DateOfTheEvent)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SportComplex.Title)
+            @Html.DisplayNameFor(model => model.SportComplexTitle)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SportComplex.Title)
+            @Html.DisplayFor(model => model.SportComplexTitle)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SportComplex.Address)
+            @Html.DisplayNameFor(model => model.SportComplexAddress)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SportComplex.Address)
+            @Html.DisplayFor(model => model.SportComplexAddress)
         </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.SportEventId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="AllSportEvents">Back to List</a>
 </div>
