--- a/UtopiaCity/Views/SportEvent/Edit.cshtml
+++ b/UtopiaCity/Views/SportEvent/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model UtopiaCity.Models.Sport.SportEvent
+﻿@model SportEventViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -13,6 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="SportEventId" />
+            <input type="hidden" asp-for="SportComplexId" />
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
@@ -24,6 +25,18 @@
                 <span asp-validation-for="DateOfTheEvent" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="SportComplexTitle" class="control-label"></label>
+                <select asp-for="SportComplexTitle" class="form-control">
+                    @foreach (var sportComplexTitle in Model.SportComplexesTitles)
+                    {
+                        <option value="@sportComplexTitle">
+                            @sportComplexTitle
+                        </option>
+                    }
+                </select>
+                <span asp-validation-for="SportComplexTitle" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
@@ -31,7 +44,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="AllSportEvents">Back to List</a>
 </div>
 
 @section Scripts {
