Changed Id Property DataType; Modified Flight Model; Added New Method ToThe FlightService;

--- a/UtopiaCity/Views/Flight/FlightList.cshtml
+++ b/UtopiaCity/Views/Flight/FlightList.cshtml
@@ -8,7 +8,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
+                @Html.DisplayNameFor(model => model.FlightNumber)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Destination)
@@ -29,7 +29,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Id)
+                    @Html.DisplayFor(modelItem => item.FlightNumber)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Destination)
@@ -44,8 +44,8 @@
                     @Html.DisplayFor(modelItem => item.Weather)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
