--- a/UtopiaCity/Views/Flight/FlightDeleteView.cshtml
+++ b/UtopiaCity/Views/Flight/FlightDeleteView.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.FlightNumber)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+            @Html.DisplayFor(model => model.FlightNumber)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Destination)
@@ -43,9 +43,9 @@
         </dd>
     </dl>
 
-    <form asp-action="DeleteFlightView">
+    <form asp-action="FlightDeleteView">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" asp-action="Delete" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
