--- a/UtopiaCity/Views/Flight/FlightDetailsView.cshtml
+++ b/UtopiaCity/Views/Flight/FlightDetailsView.cshtml
@@ -11,10 +11,10 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.FlightNumber)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+            @Html.DisplayFor(model => model.FlightNumber)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Destination)
