--- a/UtopiaCity/Views/Shared/_Layout.cshtml
+++ b/UtopiaCity/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="WeatherReport" asp-action="Index">Weather Forecast</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Life" asp-action="Index">Life</a>
+                        </li>
                     </ul>
                 </div>
             </div>
