--- a/UtopiaCity/Views/HousingSystem/RealEstateListView.cshtml
+++ b/UtopiaCity/Views/HousingSystem/RealEstateListView.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "RealEstateListView";
 }
 
-<h1>RealEstateListView</h1>
+<h1>Real Estate List</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
