Resolved typo in ResidentAccountController

--- a/UtopiaCity/Views/Shared/_Layout.cshtml
+++ b/UtopiaCity/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="EmergencyReport" asp-action="Index">Emergency Reports</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="RersidentAccounts" asp-action="Index">City Administration</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RersidentAccount" asp-action="Index">City Administration</a>
                         </li>
                     </ul>
                 </div>
