Сделал сервис для  Airport(только вывод списком и дефолтные данные). Осталось узнать на счёт модели от человека и остальных методах. По теор. они не нужны. Иницилизация данных в 1 файле. Глянуть структуру папок (тк маршрутизация столько моими папками громоздка)

--- a/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
+++ b/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
@@ -8,6 +8,9 @@
 <ul class="navbar-nav flex-grow-1">
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Schedule" asp-action="Index">ScheduleListView</a>
+
+        <a class="nav-link text-dark" asp-area="" asp-controller="PermitedConditions" asp-action="Index">PermitedConditonsView</a>
+        
     </li>
 </ul>
 
