Fxed Namespace Typo

--- a/UtopiaCity/Views/RersidentAccount/Details.cshtml
+++ b/UtopiaCity/Views/RersidentAccount/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model UtopiaCity.Models.CityAdministration.ResidentAccount.RersidentAccount
+﻿@model UtopiaCity.Models.CityAdministration.RersidentAccount
 
 @{
     ViewData["Title"] = "Details";
