--- a/UtopiaCity/Views/HousingSystem/CreateRealEstateView.cshtml
+++ b/UtopiaCity/Views/HousingSystem/CreateRealEstateView.cshtml
@@ -1,4 +1,5 @@
-﻿@model UtopiaCity.Models.HousingSystem.RealEstate
+﻿@using UtopiaCity.Models.HousingSystem
+@model UtopiaCity.Models.HousingSystem.RealEstate
 
 @{
     ViewData["Title"] = "CreateRealEstateView";
@@ -10,16 +11,16 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateRealEstateView">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" />
                 <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" class="form-control"></select>
+                <select asp-for="Type" asp-items="Html.GetEnumSelectList<EstateType>()" class="form-control"></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
