--- a/UtopiaCity/Views/HousingSystem/EditRealEstateView.cshtml
+++ b/UtopiaCity/Views/HousingSystem/EditRealEstateView.cshtml
@@ -1,4 +1,5 @@
-﻿@model UtopiaCity.Models.HousingSystem.RealEstate
+﻿@using UtopiaCity.Models.HousingSystem
+@model UtopiaCity.Models.HousingSystem.RealEstate
 
 @{
     ViewData["Title"] = "EditRealEstateView";
@@ -10,12 +11,12 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="EditRealEstateView">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" class="form-control"></select>
+                <select asp-for="Type" asp-items="Html.GetEnumSelectList<EstateType>()" class="form-control"></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
