--- a/UtopiaCity/Views/EmergencyReport/CreateEmergencyReportView.cshtml
+++ b/UtopiaCity/Views/EmergencyReport/CreateEmergencyReportView.cshtml
@@ -1,4 +1,5 @@
 ﻿@model UtopiaCity.Models.Emergency.EmergencyReport
+@addTagHelper *, UtopiaCity
 
 @{
     ViewData["Title"] = "CreateEmergencyReportView";
@@ -7,6 +8,9 @@
 <h1>CreateEmergencyReportView</h1>
 
 <h4>EmergencyReport</h4>
+<p>
+    Time is - <time></time>
+</p>
 <hr />
 <div class="row">
     <div class="col-md-4">
