search panel is added to index

--- a/UtopiaCity/Views/Life/Index.cshtml
+++ b/UtopiaCity/Views/Life/Index.cshtml
@@ -7,10 +7,12 @@
 
 <h1>Index</h1>
 
+<partial name="_SearchPanel"/>
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table" id="table">
     <thead>
         <tr>
             <th>
