--- a/UtopiaCity/Views/Shared/_Layout.cshtml
+++ b/UtopiaCity/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Flight" asp-action="Index">Travelling</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Tickets Service</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="WeatherReport" asp-action="Index">Weather Forecast</a>
