--- a/UtopiaCity/Views/SportEvent/Create.cshtml
+++ b/UtopiaCity/Views/SportEvent/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model UtopiaCity.Models.Sport.ViewModels.SportEventViewModel
+﻿@model SportComplexEventViewModel
 
 @{
     ViewData["Title"] = "Create"; 
@@ -13,26 +13,26 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
-                <input asp-for="Title" class="form-control" />
-                <span asp-validation-for="Title" class="text-danger"></span>
+                <label asp-for="SportEvent.Title" class="control-label"></label>
+                <input asp-for="SportEvent.Title" class="form-control" />
+                <span asp-validation-for="SportEvent.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateOfTheEvent" class="control-label"></label>
-                <input asp-for="DateOfTheEvent" class="form-control" />
-                <span asp-validation-for="DateOfTheEvent" class="text-danger"></span>
+                <label asp-for="SportEvent.DateOfTheEvent" class="control-label"></label>
+                <input asp-for="SportEvent.DateOfTheEvent" class="form-control" />
+                <span asp-validation-for="SportEvent.DateOfTheEvent" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SportComplexTitle" class="control-label"></label>
-                <select asp-for="SportComplexTitle" class="form-control">
-                    @foreach (var sportComplexTitle in Model.SportComplexesTitles)
+                <label asp-for="SportComplex.Title" class="control-label"></label>
+                <select asp-for="SportComplex.Title" class="form-control">
+                    @foreach (var sportComplexTitle in ViewBag.SportComplexesTitles)
                     {
                         <option value="@sportComplexTitle">
                             @sportComplexTitle
                         </option>
                     }
                 </select>
-                <span asp-validation-for="SportComplexTitle" class="text-danger"></span>
+                <span asp-validation-for="SportComplex.Title" class="text-danger"></span>
              </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
