--- a/UtopiaCity/Views/_ViewImports.cshtml
+++ b/UtopiaCity/Views/_ViewImports.cshtml
@@ -2,5 +2,5 @@
 @using UtopiaCity.Models
 @using UtopiaCity.Models.Sport
 @using UtopiaCity.Models.Sport.Enums
-@using UtopiaCity.Models.Sport.ViewModels
+@using UtopiaCity.ViewModels.Sport
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
