--- a/UtopiaCity/Views/SportEvent/Create.cshtml
+++ b/UtopiaCity/Views/SportEvent/Create.cshtml
@@ -9,21 +9,21 @@
 <h4>SportEvent</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="SportEvent.Title" class="control-label"></label>
+            <div class="input-group mb-3">
+                <label asp-for="SportEvent.Title" class="input-group-text"></label>
                 <input asp-for="SportEvent.Title" class="form-control" />
                 <span asp-validation-for="SportEvent.Title" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="SportEvent.DateOfTheEvent" class="control-label"></label>
+            <div class="input-group mb-3">
+                <label asp-for="SportEvent.DateOfTheEvent" class="input-group-text"></label>
                 <input asp-for="SportEvent.DateOfTheEvent" class="form-control" />
                 <span asp-validation-for="SportEvent.DateOfTheEvent" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="SportComplex.Title" class="control-label"></label>
+            <div class="input-group mb-3">
+                <label asp-for="SportComplex.Title" class="input-group-text"></label>
                 <select asp-for="SportComplex.Title" class="form-control">
                     @foreach (var sportComplexTitle in ViewBag.SportComplexesTitles)
                     {
@@ -35,14 +35,14 @@
                 <span asp-validation-for="SportComplex.Title" class="text-danger"></span>
              </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="AllSportEvents">Back to List</a>
+    <a class="btn btn-outline-secondary" role="button" asp-action="AllSportEvents">Back to List</a>
 </div>
 
 @section Scripts {
