--- a/UtopiaCity/Views/SportEvent/Delete.cshtml
+++ b/UtopiaCity/Views/SportEvent/Delete.cshtml
@@ -10,36 +10,40 @@
 <div>
     <h4>SportEvent</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SportEvent.Title)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SportEvent.Title)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SportEvent.DateOfTheEvent)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SportEvent.DateOfTheEvent)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SportComplex.Title)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SportComplex.Title)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SportComplex.Address)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SportComplex.Address)
-        </dd>
-    </dl>
-    
+    <div class="row">
+        <div class="col">
+            <dl class="row">
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.SportEvent.Title)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.SportEvent.Title)
+                </dd>
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.SportEvent.DateOfTheEvent)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.SportEvent.DateOfTheEvent)
+                </dd>
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.SportComplex.Title)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.SportComplex.Title)
+                </dd>
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.SportComplex.Address)
+                </dt>
+                <dd class="col-sm-8">
+                    @Html.DisplayFor(model => model.SportComplex.Address)
+                </dd>
+            </dl>
+        </div>
+    </div>
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="SportEvent.SportEventId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="AllSportEvents">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-outline-danger" /> |
+        <a class="btn btn-outline-secondary" role="button" asp-action="AllSportEvents">Back to List</a>
     </form>
 </div>
