Business - Added Company and CompanyStatus

--- a/UtopiaCity/Views/Business/Index.cshtml
+++ b/UtopiaCity/Views/Business/Index.cshtml
@@ -1,3 +1,5 @@
 ﻿<p>
     <a class="btn btn-sm btn-light" asp-controller="Bank" asp-action="Index">Bank</a>
+    <a class="btn btn-sm btn-light" asp-controller="CompanyStatus" asp-action="Index">Company status</a>
+    <a class="btn btn-sm btn-light" asp-controller="Company" asp-action="Index">Company</a>
 </p>
