--- a/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
+++ b/UtopiaCity/Views/TimelineBasic/ListTimelineView.cshtml
@@ -1,15 +1,53 @@
 ﻿@model IEnumerable<UtopiaCity.Models.TimelineModel.TimelineModel>
 @addTagHelper *, UtopiaCity
 @{
-    ViewData["Title"] = "ListTimelineView";
+    string name = "Timeline-22";
+    ViewData["Title"] = name;
 }
 
-<h1>ListTimelineView</h1>
-<clock></clock>
+<h1>Главная Timeline-22</h1>
 
-@await Html.PartialAsync("~/Views/Shared/_RealClock.cshtml")
+<data></data>
+<div class="clock"></div>
 
-<partial name="~/Views/Shared/_RealClock.cshtml" />
+@section Scripts{
+@*
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+*@
+    <script>$(document).ready(function () {
+            clockUpdate();
+            setInterval(clockUpdate, 1000);
+        })
+
+        function clockUpdate() {
+            var date = new Date();
+            $('.clock').css({ 'color': '#212529', 'font-size' : '16px' });
+            function addZero(x) {
+                if (x < 10) {
+                    return x = '0' + x;
+                } else {
+                    return x;
+                }
+            }
+
+            function twelveHour(x) {
+                if (x > 24) {
+                    return x = x - 24;
+                } else if (x == 0) {
+                    return x = 24;
+                } else {
+                    return x;
+                }
+            }
+
+            var h = addZero(twelveHour(date.getHours()));
+            var m = addZero(date.getMinutes());
+            var s = addZero(date.getSeconds());
+
+            $('.clock').text(h + ':' + m + ':' + s)
+        }</script>
+}
+
 <ul class="navbar-nav flex-grow-1">
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Schedule" asp-action="Index">Расписание</a>
