Added controllers and views for TransportManager. Added enums for TransportManagerSystem

--- a/UtopiaCity/Views/Shared/_Layout.cshtml
+++ b/UtopiaCity/Views/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="RersidentAccount" asp-action="Index">City Administration</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TransportManagers" asp-action="Index">AirportTransportSystem</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="SportComplex" asp-action="AllSportComplexes">Sport Complexes</a>
                         </li>
                         <li class="nav-item">
