Added controllers, create, delete and list views for Ticket

--- a/UtopiaCity/Views/Shared/_Layout.cshtml
+++ b/UtopiaCity/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Flight" asp-action="Index">Travelling</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Ticket" asp-action="Index">Tickets Service</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="WeatherReport" asp-action="Index">Weather Forecast</a>
                         </li>
                         <li class="nav-item">
