Some modification to the view.

--- a/UtopiaCity/Views/CityAdministration/RersidentAccount/Create.cshtml
+++ b/UtopiaCity/Views/CityAdministration/RersidentAccount/Create.cshtml
@@ -1,12 +1,13 @@
 ﻿@model UtopiaCity.Models.CityAdministration.RersidentAccount
 
 @{
+    Layout = "/Views/CityAdministration/_MyLayout.cshtml";
     ViewData["Title"] = "Create";
 }
 
 <h1>Create</h1>
 
-<h4>RersidentAccount</h4>
+<h4>New account</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
