--- a/UtopiaCity/Views/CityAdministration/RersidentAccount/Details.cshtml
+++ b/UtopiaCity/Views/CityAdministration/RersidentAccount/Details.cshtml
@@ -1,13 +1,14 @@
 ﻿@model UtopiaCity.Models.CityAdministration.RersidentAccount
 
 @{
+    Layout = "/Views/CityAdministration/_MyLayout.cshtml";
     ViewData["Title"] = "Details";
 }
 
 <h1>Details</h1>
 
 <div>
-    <h4>RersidentAccount</h4>
+    <h4>Account</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
