--- a/UtopiaCity/Views/CityAdministration/RersidentAccount/Edit.cshtml
+++ b/UtopiaCity/Views/CityAdministration/RersidentAccount/Edit.cshtml
@@ -1,12 +1,13 @@
 ﻿@model UtopiaCity.Models.CityAdministration.RersidentAccount
 
 @{
+    Layout = "/Views/CityAdministration/_MyLayout.cshtml";
     ViewData["Title"] = "Edit";
 }
 
 <h1>Edit</h1>
 
-<h4>RersidentAccount</h4>
+<h4>Account</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
