--- a/UtopiaCity/Views/Shared/_Layout.cshtml
+++ b/UtopiaCity/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="WeatherReport" asp-action="Index">Weather Forecast</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="RersidentAccount" asp-action="Index">City Administration</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CityAdministrationHome" asp-action="Index">City Administration</a>
                         </li>
                     </ul>
                 </div>
