--- a/UtopiaCity/Views/CityAdministration/RersidentAccount/Delete.cshtml
+++ b/UtopiaCity/Views/CityAdministration/RersidentAccount/Delete.cshtml
@@ -1,6 +1,7 @@
 ﻿@model UtopiaCity.Models.CityAdministration.RersidentAccount
 
 @{
+    Layout = "/Views/CityAdministration/_MyLayout.cshtml";
     ViewData["Title"] = "Delete";
 }
 
@@ -8,7 +9,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>RersidentAccount</h4>
+    <h4>Account</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
