--- a/UtopiaCity/Views/CityAdministration/RersidentAccount/Index.cshtml
+++ b/UtopiaCity/Views/CityAdministration/RersidentAccount/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model IEnumerable<UtopiaCity.Models.CityAdministration.RersidentAccount>
 
 @{
-    ViewData["Title"] = "Index";
+    Layout = "/Views/CityAdministration/_MyLayout.cshtml";
+    ViewData["Title"] = "Residents Accounts";
 }
 
-<h1>New Account</h1>
+<h1>Residents</h1>
 
 <p>
     <a asp-action="Create">Create</a>
