Add "CitizenTaskService" class for working with basic crud operation for controller Update "CitizenTaskController" for work with "CitizenTaskService" Add "CitizenTaskInitializer" for initialize CitizenTask table in database Update some views

--- a/UtopiaCity/Views/CitizensTasks/Edit.cshtml
+++ b/UtopiaCity/Views/CitizensTasks/Edit.cshtml
@@ -4,6 +4,12 @@
     ViewData["Title"] = "Edit";
 }
 
+@if (!string.IsNullOrEmpty(ViewBag.Message))
+{
+    <div class="alert alert-info" role="alert">
+        <strong>@ViewBag.Message</strong>
+    </div>
+}
 <h4>Edit Task</h4>
 <hr />
 <div class="row">
